Changed SpaceTimeCubes to wrap 2D and 3D arrays instead of constant data in profiling script

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -8195,24 +8195,31 @@ cube_resolution = (
 # Create an input dictionary of SpaceTimeCubes (using constant data for this example)
 #============================================================================================
 
+def arr2d(value):
+    return np.full(grid_shape, value)
+
+def arr3d(value):
+    (b, r, c) = cube_shape
+    return np.full((b, r//10, c//10) , value)
+
 space_time_cubes = {
-    "slope"                        : SpaceTimeCube(cube_shape, 0.8),   # rise/run
-    "aspect"                       : SpaceTimeCube(cube_shape, 225.0), # degrees clockwise from North
-    "fuel_model"                   : SpaceTimeCube(cube_shape, 101),   # integer index in fm.fuel_model_table
-    "canopy_cover"                 : SpaceTimeCube(cube_shape, 0.6),   # 0-1
-    "canopy_height"                : SpaceTimeCube(cube_shape, 30.0),  # m
-    "canopy_base_height"           : SpaceTimeCube(cube_shape, 3.0),   # m
-    "canopy_bulk_density"          : SpaceTimeCube(cube_shape, 0.3),   # kg/m^3
-    "wind_speed_10m"               : SpaceTimeCube(cube_shape, 30.0),  # km/hr
-    "upwind_direction"             : SpaceTimeCube(cube_shape, 180.0), # degrees clockwise from North
-    "fuel_moisture_dead_1hr"       : SpaceTimeCube(cube_shape, 0.05),  # kg moisture/kg ovendry weight
-    "fuel_moisture_dead_10hr"      : SpaceTimeCube(cube_shape, 0.10),  # kg moisture/kg ovendry weight
-    "fuel_moisture_dead_100hr"     : SpaceTimeCube(cube_shape, 0.15),  # kg moisture/kg ovendry weight
-    "fuel_moisture_live_herbaceous": SpaceTimeCube(cube_shape, 0.90),  # kg moisture/kg ovendry weight
-    "fuel_moisture_live_woody"     : SpaceTimeCube(cube_shape, 0.60),  # kg moisture/kg ovendry weight
-    "foliar_moisture"              : SpaceTimeCube(cube_shape, 0.90),  # kg moisture/kg ovendry weight
-    "fuel_spread_adjustment"       : SpaceTimeCube(cube_shape, 1.0),   # float >= 0.0 (Optional: defaults to 1.0)
-    "weather_spread_adjustment"    : SpaceTimeCube(cube_shape, 1.0),   # float >= 0.0 (Optional: defaults to 1.0)
+    "slope"                        : SpaceTimeCube(cube_shape, arr2d(0.8)),   # rise/run
+    "aspect"                       : SpaceTimeCube(cube_shape, arr2d(225.0)), # degrees clockwise from North
+    "fuel_model"                   : SpaceTimeCube(cube_shape, arr2d(101)),   # integer index in fm.fuel_model_table
+    "canopy_cover"                 : SpaceTimeCube(cube_shape, arr2d(0.6)),   # 0-1
+    "canopy_height"                : SpaceTimeCube(cube_shape, arr2d(30.0)),  # m
+    "canopy_base_height"           : SpaceTimeCube(cube_shape, arr2d(3.0)),   # m
+    "canopy_bulk_density"          : SpaceTimeCube(cube_shape, arr2d(0.3)),   # kg/m^3
+    "wind_speed_10m"               : SpaceTimeCube(cube_shape, arr3d(30.0)),  # km/hr
+    "upwind_direction"             : SpaceTimeCube(cube_shape, arr3d(180.0)), # degrees clockwise from North
+    "fuel_moisture_dead_1hr"       : SpaceTimeCube(cube_shape, arr3d(0.05)),  # kg moisture/kg ovendry weight
+    "fuel_moisture_dead_10hr"      : SpaceTimeCube(cube_shape, arr3d(0.10)),  # kg moisture/kg ovendry weight
+    "fuel_moisture_dead_100hr"     : SpaceTimeCube(cube_shape, arr3d(0.15)),  # kg moisture/kg ovendry weight
+    "fuel_moisture_live_herbaceous": SpaceTimeCube(cube_shape, arr3d(0.90)),  # kg moisture/kg ovendry weight
+    "fuel_moisture_live_woody"     : SpaceTimeCube(cube_shape, arr3d(0.60)),  # kg moisture/kg ovendry weight
+    "foliar_moisture"              : SpaceTimeCube(cube_shape, arr3d(0.90)),  # kg moisture/kg ovendry weight
+    "fuel_spread_adjustment"       : SpaceTimeCube(cube_shape, arr2d(1.0)),   # float >= 0.0 (Optional: defaults to 1.0)
+    "weather_spread_adjustment"    : SpaceTimeCube(cube_shape, arr3d(1.0)),   # float >= 0.0 (Optional: defaults to 1.0)
 }
 
 #============================================================================================
@@ -8330,19 +8337,19 @@ Fire Type (0=unburned, 1=surface, 2=passive_crown, 3=active_crown)
 {'Min': 1, 'Max': 1, 'Mean': 1.0, 'Stdev': 0.0}
 
 Spread Rate (m/min)
-{'Min': 0.16077119, 'Max': 2.2964668, 'Mean': 1.2116491, 'Stdev': 0.63416344}
+{'Min': 0.16077119, 'Max': 2.2964668, 'Mean': 1.2116491, 'Stdev': 0.63416356}
 
 Spread Direction (degrees clockwise from North)
-{'Min': 0.6585914, 'Max': 359.69888, 'Mean': 191.40175, 'Stdev': 117.93311}
+{'Min': 0.6586216, 'Max': 359.69888, 'Mean': 191.40175, 'Stdev': 117.93311}
 
 Fireline Intensity (kW/m)
-{'Min': 2.2772386, 'Max': 32.528236, 'Mean': 17.162365, 'Stdev': 8.982589}
+{'Min': 2.2772386, 'Max': 32.528236, 'Mean': 17.162365, 'Stdev': 8.982591}
 
 Flame Length (meters)
-{'Min': 0.11312116, 'Max': 0.38439324, 'Mean': 0.27523625, 'Stdev': 0.073568314}
+{'Min': 0.11312116, 'Max': 0.38439324, 'Mean': 0.27523628, 'Stdev': 0.07356832}
 
 Time of Arrival (minutes)
-{'Min': 2081.8513, 'Max': 2548.1528, 'Mean': 2385.5913, 'Stdev': 116.83745}
+{'Min': 2081.8513, 'Max': 2548.1528, 'Mean': 2385.5913, 'Stdev': 116.83744}
 #+end_example
 
 **** Create Images of the Output Matrices
@@ -8667,7 +8674,7 @@ Spread Rate (m/min)
 {'Min': 0.16055721, 'Max': 2.2964664, 'Mean': 1.383971, 'Stdev': 0.68492335}
 
 Spread Direction (degrees clockwise from North)
-{'Min': 0.015651718, 'Max': 359.8231, 'Mean': 179.89366, 'Stdev': 127.714645}
+{'Min': 0.015651416, 'Max': 359.8231, 'Mean': 179.89366, 'Stdev': 127.714645}
 
 Fireline Intensity (kW/m)
 {'Min': 2.2742078, 'Max': 32.52823, 'Mean': 19.603214, 'Stdev': 9.701576}
@@ -8684,7 +8691,7 @@ Firebrand Count (number of firebrands)
 Total Firebrands on Grid: 743
 
 Future Spot Ignitions:
-{2551.1983484249668: {(78, 75)},
+{2551.198349531833: {(78, 75)},
  2551.4128378868545: {(79, 54), (80, 60)},
  2551.8570495625095: {(82, 36)},
  2553.243730269104: {(73, 50)},
@@ -8694,30 +8701,30 @@ Future Spot Ignitions:
  2555.5255703556245: {(78, 60), (78, 58)},
  2556.281415042003: {(80, 74)},
  2556.957528510658: {(79, 80), (78, 75)},
- 2557.1965199840843: {(72, 52), (75, 51)},
+ 2557.1965187215546: {(72, 52), (75, 51)},
  2560.051807503919: {(82, 76)},
  2560.0549510644096: {(75, 81)},
  2562.2247250858395: {(78, 53)},
- 2563.0142549445554: {(60, 78)},
+ 2563.0142532417567: {(60, 78)},
  2563.8632085416048: {(81, 38)},
  2566.6677219767957: {(82, 40)},
  2567.2130485511593: {(78, 77)},
  2567.3587371828735: {(83, 69)},
- 2569.3315993024007: {(79, 77)},
- 2570.9222418350946: {(83, 43), (83, 36)},
+ 2569.33159813085: {(79, 77)},
+ 2570.92224029922: {(83, 43), (83, 36)},
  2573.732535115886: {(92, 51)},
- 2574.6585753861295: {(53, 44)},
+ 2574.658577090567: {(53, 44)},
  2574.7944549624035: {(85, 72)},
  2575.8510325678994: {(81, 65), (80, 63)},
  2576.9250318582476: {(90, 38)},
- 2576.970254288768: {(78, 60), (80, 63)},
+ 2576.9702525946614: {(78, 60), (80, 63)},
  2581.2576899614737: {(73, 78)},
- 2583.255882787028: {(84, 31)},
+ 2583.2558841467608: {(84, 31)},
  2583.532753380975: {(84, 54)},
  2583.757556126505: {(70, 84)},
- 2591.9153606730115: {(66, 34), (71, 40)},
+ 2591.9153573859367: {(66, 34), (71, 40)},
  2592.88477227848: {(64, 36)},
- 2603.1104028205696: {(80, 55)},
+ 2603.110398702295: {(80, 55)},
  2613.442298175292: {(61, 37)}}
 #+end_example
 
@@ -9134,15 +9141,15 @@ Fork: {'Min': 1, 'Max': 1, 'Mean': 1.0, 'Stdev': 0.0}
 
 Spread Rate (m/min)
 Main: {'Min': 0.16077119, 'Max': 2.2964668, 'Mean': 1.2057383, 'Stdev': 0.63797617}
-Fork: {'Min': 0.16077119, 'Max': 2.2964668, 'Mean': 1.1890503, 'Stdev': 0.63051194}
+Fork: {'Min': 0.16077119, 'Max': 2.2964668, 'Mean': 1.1890503, 'Stdev': 0.630512}
 
 Spread Direction (degrees clockwise from North)
-Main: {'Min': 0.27232167, 'Max': 359.69888, 'Mean': 190.26033, 'Stdev': 117.35212}
-Fork: {'Min': 0.27232167, 'Max': 359.69888, 'Mean': 192.25833, 'Stdev': 116.70386}
+Main: {'Min': 0.27232373, 'Max': 359.69888, 'Mean': 190.26033, 'Stdev': 117.35212}
+Fork: {'Min': 0.27232373, 'Max': 359.69888, 'Mean': 192.25833, 'Stdev': 116.70386}
 
 Fireline Intensity (kW/m)
-Main: {'Min': 2.2772386, 'Max': 32.528236, 'Mean': 17.078642, 'Stdev': 9.036593}
-Fork: {'Min': 2.2772386, 'Max': 32.528236, 'Mean': 16.842266, 'Stdev': 8.930867}
+Main: {'Min': 2.2772386, 'Max': 32.528236, 'Mean': 17.078642, 'Stdev': 9.036594}
+Fork: {'Min': 2.2772386, 'Max': 32.528236, 'Mean': 16.842266, 'Stdev': 8.930868}
 
 Flame Length (meters)
 Main: {'Min': 0.11312116, 'Max': 0.38439324, 'Mean': 0.27460188, 'Stdev': 0.07341512}
