--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -8239,6 +8239,7 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
 import numpy as np
 import pyretechnics.eulerian_level_set as els
 from pyretechnics.space_time_cube import SpaceTimeCube
+import time
 
 #============================================================================================
 # Specify the SpaceTimeCube dimensions
@@ -8324,12 +8325,27 @@ output_matrices["phi"][50,50] = -1.0
 # Spread fire from the start time for the max duration
 #============================================================================================
 
+runtime_start       = time.perf_counter()
 fire_spread_results = els.spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolution,
                                                      start_time, max_duration)
+runtime_stop        = time.perf_counter()
 
 stop_time       = fire_spread_results["stop_time"]       # minutes
 stop_condition  = fire_spread_results["stop_condition"]  # "max duration reached" or "no burnable cells"
 output_matrices = fire_spread_results["output_matrices"] # updated 2D arrays (mutated from inputs)
+
+#============================================================================================
+# Print out the acres burned, total runtime, and runtime per burned cell
+#============================================================================================
+
+num_burned_cells        = np.count_nonzero(output_matrices["fire_type"]) # cells
+acres_burned            = num_burned_cells / 4.5                         # acres
+simulation_runtime      = runtime_stop - runtime_start                   # seconds
+runtime_per_burned_cell = 1000.0 * simulation_runtime / num_burned_cells # ms/cell
+
+print("Acres Burned: " + str(acres_burned))
+print("Total Runtime: " + str(simulation_runtime) + " seconds")
+print("Runtime per Burned Cell: " + str(runtime_per_burned_cell) + " ms/cell")
 #+end_src
 
 **** Display Summary Statistics of the Output Matrices
@@ -8551,6 +8567,7 @@ file:pics/els_time_of_arrival.png
 import numpy as np
 import pyretechnics.eulerian_level_set as els
 from pyretechnics.space_time_cube import SpaceTimeCube
+import time
 
 #============================================================================================
 # Specify the SpaceTimeCube dimensions
@@ -8646,15 +8663,30 @@ spot_config = {
 # Spread fire from the start time for the max duration
 #============================================================================================
 
+runtime_start       = time.perf_counter()
 fire_spread_results = els.spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolution,
                                                      start_time, max_duration, spot_ignitions={},
                                                      spot_config=spot_config)
+runtime_stop        = time.perf_counter()
 
 stop_time        = fire_spread_results["stop_time"]                  # minutes
 stop_condition   = fire_spread_results["stop_condition"]             # "max duration reached" or "no burnable cells"
 output_matrices  = fire_spread_results["output_matrices"]            # updated 2D arrays (mutated from inputs)
 spot_ignitions   = fire_spread_results.get("spot_ignitions", {})     # remaining firebrands on the landscape
 random_generator = fire_spread_results.get("random_generator", None) # numpy.random.Generator object
+
+#============================================================================================
+# Print out the acres burned, total runtime, and runtime per burned cell
+#============================================================================================
+
+num_burned_cells        = np.count_nonzero(output_matrices["fire_type"]) # cells
+acres_burned            = num_burned_cells / 4.5                         # acres
+simulation_runtime      = runtime_stop - runtime_start                   # seconds
+runtime_per_burned_cell = 1000.0 * simulation_runtime / num_burned_cells # ms/cell
+
+print("Acres Burned: " + str(acres_burned))
+print("Total Runtime: " + str(simulation_runtime) + " seconds")
+print("Runtime per Burned Cell: " + str(runtime_per_burned_cell) + " ms/cell")
 #+end_src
 
 **** Display Summary Statistics of the Output Matrices and Spot Ignitions
@@ -8944,6 +8976,7 @@ file:pics/els_spot_time_of_arrival.png
 import numpy as np
 import pyretechnics.eulerian_level_set as els
 from pyretechnics.space_time_cube import SpaceTimeCube
+import time
 
 #============================================================================================
 # Specify the SpaceTimeCube dimensions
@@ -9022,12 +9055,27 @@ output_matrices["phi"][50,50] = -1.0
 # Spread fire from the start time for the max duration
 #============================================================================================
 
+runtime_start         = time.perf_counter()
 fire_spread_results_8 = els.spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolution,
                                                        start_time, max_duration)
+runtime_stop          = time.perf_counter()
 
 stop_time       = fire_spread_results_8["stop_time"]       # minutes
 stop_condition  = fire_spread_results_8["stop_condition"]  # "max duration reached" or "no burnable cells"
 output_matrices = fire_spread_results_8["output_matrices"] # updated 2D arrays (mutated from inputs)
+
+#============================================================================================
+# Print out the acres burned, total runtime, and runtime per burned cell
+#============================================================================================
+
+num_burned_cells        = np.count_nonzero(output_matrices["fire_type"]) # cells
+acres_burned            = num_burned_cells / 4.5                         # acres
+simulation_runtime      = runtime_stop - runtime_start                   # seconds
+runtime_per_burned_cell = 1000.0 * simulation_runtime / num_burned_cells # ms/cell
+
+print("Acres Burned: " + str(acres_burned))
+print("Total Runtime: " + str(simulation_runtime) + " seconds")
+print("Runtime per Burned Cell: " + str(runtime_per_burned_cell) + " ms/cell")
 #+end_src
 
 **** Fork and Run Two Fire Spread Scenarios
@@ -9074,20 +9122,54 @@ new_start_time = stop_time # minutes
 new_max_duration = 240     # minutes
 
 # Spread the main simulation
+runtime_start_main     = time.perf_counter()
 fire_spread_results_12 = els.spread_fire_with_phi_field(space_time_cubes, output_matrices,
                                                         cube_resolution, new_start_time, new_max_duration)
+runtime_stop_main      = time.perf_counter()
 
 stop_time       = fire_spread_results_12["stop_time"]       # minutes
 stop_condition  = fire_spread_results_12["stop_condition"]  # "max duration reached" or "no burnable cells"
 output_matrices = fire_spread_results_12["output_matrices"] # updated 2D arrays (mutated from inputs)
 
 # Spread the forked simulation
+runtime_start_fork          = time.perf_counter()
 fire_spread_results_12_fork = els.spread_fire_with_phi_field(space_time_cubes_fork, output_matrices_fork,
                                                              cube_resolution, new_start_time, new_max_duration)
+runtime_stop_fork           = time.perf_counter()
 
 stop_time_fork       = fire_spread_results_12_fork["stop_time"]       # minutes
 stop_condition_fork  = fire_spread_results_12_fork["stop_condition"]  # "max duration reached" or "no burnable cells"
 output_matrices_fork = fire_spread_results_12_fork["output_matrices"] # updated 2D arrays (mutated from inputs)
+
+#============================================================================================
+# Print out the acres burned, total runtime, and runtime per burned cell for the main run
+#============================================================================================
+
+num_burned_cells         = np.count_nonzero(output_matrices["fire_type"])       # cells
+acres_burned             = num_burned_cells / 4.5                               # acres
+simulation_runtime_main  = runtime_stop_main - runtime_start_main               # seconds
+simulation_runtime_total = simulation_runtime + simulation_runtime_main         # seconds
+runtime_per_burned_cell  = 1000.0 * simulation_runtime_total / num_burned_cells # ms/cell
+
+print("Main Fire\n" + "=" * 60)
+print("Acres Burned: " + str(acres_burned))
+print("Total Runtime: " + str(simulation_runtime_total) + " seconds")
+print("Runtime per Burned Cell: " + str(runtime_per_burned_cell) + " ms/cell")
+
+#============================================================================================
+# Print out the acres burned, total runtime, and runtime per burned cell for the forked run
+#============================================================================================
+
+num_burned_cells         = np.count_nonzero(output_matrices_fork["fire_type"])  # cells
+acres_burned             = num_burned_cells / 4.5                               # acres
+simulation_runtime_fork  = runtime_stop_fork - runtime_start_fork               # seconds
+simulation_runtime_total = simulation_runtime + simulation_runtime_fork         # seconds
+runtime_per_burned_cell  = 1000.0 * simulation_runtime_total / num_burned_cells # ms/cell
+
+print("\nForked Fire\n" + "=" * 60)
+print("Acres Burned: " + str(acres_burned))
+print("Total Runtime: " + str(simulation_runtime_total) + " seconds")
+print("Runtime per Burned Cell: " + str(runtime_per_burned_cell) + " ms/cell")
 #+end_src
 
 **** Display Summary Statistics of the Two Scenarios' Outputs
